--- a/install_tools/Makefile
+++ b/install_tools/Makefile
@@ -1,4 +1,4 @@
-.PHONY: install
+.PHONY: install inventory
 
 CURRENT_DIR := $(shell pwd)
 PACKAGE = apt
@@ -6,3 +6,6 @@ PACKAGE = apt
 
 install:
 	python3 $(CURRENT_DIR)/python_scripts/build_python_venv.py --package $(PACKAGE)
+
+inventory:
+	python3 $(CURRENT_DIR)/python_scripts/make_inventory.py
