--- a/install_tools/Makefile
+++ b/install_tools/Makefile
@@ -7,9 +7,11 @@ PACKAGE := apt
 
 
 install:
-	python3 $(CURRENT_DIR)/python_scripts/build_python_venv.py --package $(PACKAGE)
+	python3 $(CURRENT_DIR)/python_scripts/build.py --package $(PACKAGE)
 	
-	export AIRFLOW_HOME=$(AIRFLOW_HOME_DIR) && $(PYTHON_INTERPRETOR) -m airflow db migrate
+	@echo "start initializing Airflow db ..."
+	@export AIRFLOW_HOME=$(AIRFLOW_HOME_DIR) && $(PYTHON_INTERPRETOR) -m airflow db migrate
+	@echo "Airflow db initialize done!"
 
 inventory:
 	python3 $(CURRENT_DIR)/python_scripts/make_inventory.py
