--- a/install_tools/Makefile
+++ b/install_tools/Makefile
@@ -1,4 +1,4 @@
-.PHONY: install inventory
+.PHONY: install build inventory
 
 CURRENT_DIR := $(shell pwd)
 PYTHON_INTERPRETOR := $(shell pwd)/../../venv_package_man/bin/python
@@ -8,6 +8,8 @@ PACKAGE := apt
 
 install:
 	python3 $(CURRENT_DIR)/python_scripts/build.py --package $(PACKAGE)
+
+build:
 	source $(CURRENT_DIR)/bash_scripts/set_airflow_env.sh
 
 inventory:
