--- a/playbook/samples/check-environment-vars.yml.sample
+++ b/playbook/samples/check-environment-vars.yml.sample
@@ -1,3 +1,6 @@
+# ローカルの環境変数がansibleから正しく読み込めているかチェック
+# 適宜playbookが参照する環境変数に編集して使用する
+# hostがallとなっているが、ローカルでのみ動くので動作には影響しない
 - name: Check environment variables
   hosts: all
   gather_facts: no
@@ -9,3 +12,7 @@
     - name: Print ANSIBLE_SSH_PASS
       debug:
         msg: "ANSIBLE_SSH_PASS is {{ lookup('env', 'ANSIBLE_SSH_PASS') }}"
+
+    - name: Print ANSIBLE_SSH_PRIVATE_KEY_FILE
+      debug:
+        msg: "ANSIBLE_SSH_PRIVATE_KEY_FILE is {{ lookup('env', 'ANSIBLE_SSH_PRIVATE_KEY_FILE') }}"
